Fixed the watermark spectrogram all black error and added bits encoding code with BER error.

--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,12 +1,12 @@
 dataset: "librispeech"
 
 path:
-  # raw_path: "/storage/seit-guohanqi/librispeech_dataset/LibriSpeech_wav"
-  raw_path: "D:/Real-time-Voice-Watermark/dataset/LibriSpeech_wav"
+  raw_path: "/storage/seit-guohanqi/librispeech_dataset/LibriSpeech_wav"
+#  raw_path: "D:/Real-time-Voice-Watermark/dataset/LibriSpeech_wav"
   raw_path_test: "experiments/cloned_speechs"
   mel_path: "./melspectogram_images"
-  # wm_speech: "./results/wm_speech"
-  wm_speech: "D:/Real-time-Voice-Watermark/melspectogram_images"
+  wm_speech: "./results/wm_speech"
+#  wm_speech: "D:/Real-time-Voice-Watermark/melspectogram_images"
   ckpt: "results/ckpt/"
   log_path: "results/log/"
 
@@ -24,7 +24,7 @@ optimize:
   # lambda_m: 0.01
   lambda_no_m: 0.01
   lambda_a: 0.01
-  batch_size: 3
+  batch_size: 32
   step_size: 5000 # large value means do not decay
   gamma: 0.98
   betas: [0.9, 0.98]
@@ -40,7 +40,7 @@ optimize:
   train_size: 31000
 
 iter:
-  epoch: 1
-  save_circle: 2
+  epoch: 300
+  save_circle: 10
   show_circle: 100
   val_circle: 100
