--- a/config/train.yaml
+++ b/config/train.yaml
@@ -40,7 +40,8 @@ optimize:
   train_size: 31000
 
 iter:
-  epoch: 10
+  epoch: 50
   save_circle: 5
   show_circle: 100
   val_circle: 100
+  test_record_num: 10
